[package]
name = "wanef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.0"
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"